--- a/src/Dashboard/Tax/Charts/ChartStyles.css
+++ b/src/Dashboard/Tax/Charts/ChartStyles.css
@@ -1,5 +1,6 @@
 .tooltipStackedChart, 
-.tooltipDonutChart {
+.tooltipDonutChart, 
+.tooltipDonutChart_tile{
     background: #F7F7F5;
     position: absolute;
     height: 18rem;
@@ -10,6 +11,10 @@
     z-index: 20;
     border: 1px solid #556976;
 }
+
+
+
+
 
 .tooltip ::before {
     content: "";
@@ -28,6 +33,13 @@
     stroke: #93979d;
 
 }
+
+.yAxis_Tile .XAxis_Tile{
+    font-size: .8rem;
+    color: grey;
+}
+
+
 
 .topHeader{
     width: 100%;
@@ -85,12 +97,13 @@ span {
     shape-rendering: crispEdges;
     stroke: #F7F7F5 !important;
     stroke-width:  .8px;
-    font-size: 1.5rem;
+    font-size: 5rem;
     font-family: 'Lato', sans-serif;
 
 }
 
-.summary {
+.summary,
+.summary_tile {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -108,3 +121,9 @@ span {
     font-style: italic;
 }
 
+
+.summary_tile {
+
+    font-size: 3rem;
+ 
+}
