--- a/public/baseStyles.css
+++ b/public/baseStyles.css
@@ -6,3 +6,30 @@ html {
 body {
     font-family: 'Montserrat', sans-serif;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+h1 {
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 300;
+}
+h2 {
+    font-size: 2rem;
+    text-align: center;
+    font-weight: 300;
+}
+h3 {
+    font-size: 1.5rem;
+    text-align: center;
+    font-weight: 300;
+}
+h4 {
+    font-size: 1.2rem;
+    text-align: center;
+    font-style: italic;
+
+}
