--- a/src/Dashboard/Tax/Charts/ChartStyles.css
+++ b/src/Dashboard/Tax/Charts/ChartStyles.css
@@ -16,6 +16,18 @@
 
 
 
+.tooltip {
+    background: #F7F7F5;
+    position: absolute;
+    height: 18rem;
+    width: 24rem;
+    border-radius: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#556976;
+    z-index: 20;
+    border: 1px solid #556976;
+}
+
 .tooltip ::before {
     content: "";
     height: 15px;
@@ -28,6 +40,7 @@
     z-index: 1;
 
 }
+
 
 .xAxis {
     stroke: #93979d;
@@ -97,8 +110,8 @@ span {
     shape-rendering: crispEdges;
     stroke: #F7F7F5 !important;
     stroke-width:  .8px;
-    font-size: 5rem;
-    font-family: 'Lato', sans-serif;
+    font-size: 1.2rem;
+    font-family: 'muli', sans-serif;
 
 }
 
@@ -117,13 +130,30 @@ span {
 
 }
 .subHeader {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-style: italic;
 }
 
 
 .summary_tile {
 
-    font-size: 3rem;
+    font-size: 2rem;
  
+}
+
+.title {
+    width: 56%;
+    height: 50%;
+    text-align: left;
+    padding: 1rem;
+    font-size: 1.2rem;
+    font-weight: 300;
+    stroke: #536D7A;
+    fill: none;
+    shape-rendering: crispEdges;
+    font-family: 'muli', sans-serif;
+}
+.centerValue_tile{
+    font-size: 1.4rem;
+    fill: red;
 }
