--- a/public/ChartStyles.css
+++ b/public/ChartStyles.css
@@ -1,7 +1,9 @@
-.tooltipStackedChart, 
-.tooltipDonutChart, 
-.tooltipSunburst,
-.tooltipDonutChart_tile{
+
+.TFSAbarCharttooltip,
+.RRSPbarCharttooltip,
+.taxBracketBarCharttooltip,
+.lifetimeBarCharttooltip,
+.taxLifetimeBarCharttooltip{
     background: #F7F7F5;
     position: absolute;
     height: 18rem;
@@ -10,7 +12,7 @@
     font-family: muli, Helvetica, sans-serif;
     font-weight: 700;
     color:#556976;
-    z-index: 20;
+    z-index: 2000;
     border: 1px solid #556976;
 }
 
@@ -26,7 +28,7 @@
     border-radius: 5px;
     font-family: Arial, Helvetica, sans-serif;
     color:#556976;
-    z-index: 20;
+    z-index: 2000;
     border: 1px solid #556976;
 }
 
