--- a/src/layout/baseStyles.css
+++ b/src/layout/baseStyles.css
@@ -1,12 +1,65 @@
 
-html {
-    font-size: 62.5%;
-    
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body {
-    font-family: 'Muli', sans-serif;
-
+   background: #fff;
+   font-family: 'Muli', sans-serif;
 }
+
+@media screen and (min-width: 200px) {
+    html {
+        font-size: 32.5%;
+    }
+  }
+  
+@media screen and (min-width: 200px) {
+    html {
+        font-size: 37.5%;
+    }
+  }
+
+@media screen and  (min-width: 600px) {
+    html {
+        font-size: 42.5%;
+    }
+  }
+@media screen and (min-width: 1000px) {
+    html {
+        font-size: 47.5%;
+    }
+  }
+@media screen and (min-width: 1100px) {
+    html {
+        font-size: 52.5%;
+    }
+  }
+
+@media screen and (min-width: 1200px) {
+    html {
+        font-size: 57.5%;
+    }
+  }
+
+@media screen and (min-width: 1300px) {
+    html {
+        font-size: 62.5%;
+    }
+  }
+@media screen and (min-width: 1500px) {
+    html {
+        font-size: 67.5%;
+    }
+  }
+
+@media screen and (min-width: 1700px) {
+    html {
+        font-size: 72.5%;
+    }
+  }
+
 
 a {
     text-decoration: none;
@@ -16,7 +69,7 @@ a {
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
     font-weight: 300;
 }
